--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
         header { position:fixed; top:0; width:100%; background:rgba(10,38,71,0.97); backdrop-filter:blur(12px); z-index:1000; border-bottom:1px solid rgba(255,255,255,0.1); }
         .navbar { display:flex; justify-content:space-between; align-items:center; padding:var(--space-md) 0; }
         .logo { font-size:1.75rem; font-weight:800; color:white; display:flex; align-items:center; gap:0.75rem; }
-        .logo i { color:var(--accent); font-size:2rem; }
+        .logo i { color:var(--accent); font-size:2rem; padding: 1rem;}
         nav ul { display:flex; gap:2.5rem; list-style:none; }
-        nav a { color:rgba(255,255,255,0.9); font-weight:600; position:relative; padding:0.5rem 0; }
+        nav a { color:rgba(255,255,255,0.9); font-weight:500; position:relative; padding:1.5rem 1rem; }
         nav a::after { content:''; position:absolute; width:0; height:2px; bottom:0; left:0; background:var(--accent); transition:0.3s; }
         nav a:hover::after, nav a.active::after { width:100%;  }
 
@@ -243,14 +243,14 @@
             <h1>Plug into the Future of Smart Living</h1>
             <p style="color: #00D4FF;">EchoNest Smart Plug saves up to <strong>30% on electricity</strong>, works with Alexa & Google Home, and installs in seconds.</p>
             <!-- <a href="" class="btn btn-primary">Explore Smart Plug</a> -->
-            <a href="https://drive.google.com/file/d/1C3jN9AfqTzzEr6-YkuXcl0iLG5kna_X4/view?usp=sharing" class="btn btn-primary" target="_blank">
+            <a href="https://drive.google.com/file/d/1C3jN9AfqTzzEr6-YkuXcl0iLG5kna_X4/view?usp=sharing" class="btn btn-primary" target="_blank" style="margin-right: 30px;">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_%282017%29.svg" 
                      alt="YouTube Logo" 
                      style="width: 38px; height: 38px; margin-right: 20px; vertical-align: middle;">
                 Explore EchoNest
               </a>
 
-              <a href="https://drive.google.com/file/d/19pLlVql9u8MNW67wLC3XwN7gLetdcXna/view?usp=sharing" class="btn btn-primary" target="_blank">
+              <a href="https://drive.google.com/file/d/19pLlVql9u8MNW67wLC3XwN7gLetdcXna/view?usp=sharing" class="btn btn-primary" target="_blank" style="margin-right: 30px;">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_%282017%29.svg" 
                      alt="YouTube Logo" 
                      style="width: 38px; height: 38px; margin-right: 20px; vertical-align: middle;">
