--- a/index.html
+++ b/index.html
@@ -243,14 +243,14 @@
             <h1>Plug into the Future of Smart Living</h1>
             <p style="color: #00D4FF;">EchoNest Smart Plug saves up to <strong>30% on electricity</strong>, works with Alexa & Google Home, and installs in seconds.</p>
             <!-- <a href="" class="btn btn-primary">Explore Smart Plug</a> -->
-            <a href="https://drive.google.com/file/d/1C3jN9AfqTzzEr6-YkuXcl0iLG5kna_X4/view?usp=sharing" class="btn btn-primary" target="_blank" style="margin-right: 30px;">
+            <a href="https://youtu.be/Gat0bi8CnvQ" class="btn btn-primary" target="_blank" style="margin-right: 30px;">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_%282017%29.svg" 
                      alt="YouTube Logo" 
                      style="width: 38px; height: 38px; margin-right: 20px; vertical-align: middle;">
                 Explore EchoNest
               </a>
 
-              <a href="https://drive.google.com/file/d/19pLlVql9u8MNW67wLC3XwN7gLetdcXna/view?usp=sharing" class="btn btn-primary" target="_blank" style="margin-right: 30px;">
+              <a href="https://youtu.be/cm3BPpBJNOw" class="btn btn-primary" target="_blank" style="margin-right: 30px;">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_%282017%29.svg" 
                      alt="YouTube Logo" 
                      style="width: 38px; height: 38px; margin-right: 20px; vertical-align: middle;">
