--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
             <div class="pitch-slide"><h3 style="color: #ffffff;">Financial Impact</h3><p style="color: #00D4FF;"><strong>₹77 Cr return | ₹61 Cr profit | 4.7:1 ROI</strong></p></div>
             <div class="pitch-slide"><h3 style="color: #ffffff;">Market Share</h3><p style="color: #00D4FF;"><strong>+5% = ₹260 Cr capture</strong></p></div>
             <div class="text-center" style="margin-top:var(--space-xl);">
-                <a class="btn btn-primary" style="font-size:1.3rem;padding:1.2rem 3rem;">Approve Now</a>
+                <a class="btn btn-primary" style="font-size:1.3rem;padding:1.2rem 3rem;" href="https://docs.google.com/document/d/1kn2-jYsDZriDS_a2sTE3QGCzLUwGzV5xyU7S-uSFUaM/edit?usp=sharing">Detailed Report</a>
             </div>
         </div>
     </section>
